SET(HEADER_PATH ${CMAKE_SOURCE_DIR}/include/octoon)
SET(SOURCE_PATH ${CMAKE_SOURCE_DIR}/source/engine)

SET(PLATFORM_LIST
    ${SOURCE_PATH}/main.cpp
)
SOURCE_GROUP("octoon" FILES ${PLATFORM_LIST})

IF(BUILD_PLATFORM_WINDOWS)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_WGL)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_WIN32)
ELSEIF(BUILD_PLATFORM_LINUX)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_GLX)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_X11)
ELSEIF(BUILD_PLATFORM_APPLE)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_NSGL)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_COCOA)
ELSEIF(BUILD_PLATFORM_ANDROID)
    ADD_DEFINITIONS(-DGLFW_EXPOSE_NATIVE_EGL)
ENDIF()

ADD_DEFINITIONS(-DOCTOON_MAIN_HANDLED)
ADD_EXECUTABLE(octoon-c ${PLATFORM_LIST})

TARGET_LINK_LIBRARIES(octoon-c PRIVATE runtime)

SET_TARGET_ATTRIBUTE("octoon-c" "engine")