SET(LIB_NAME math)

SET(HEADER_PATH ${COTOON_HEADER_PATH}/${LIB_NAME})
SET(SOURCE_PATH ${COTOON_SOURCE_PATH}/${LIB_NAME})

SET(MATH_LIST
	${HEADER_PATH}/vector2.h
	${HEADER_PATH}/vector3.h
	${HEADER_PATH}/vector4.h
	${HEADER_PATH}/mat2.h
	${HEADER_PATH}/mat3.h
	${HEADER_PATH}/mat4.h
	${HEADER_PATH}/quat.h
	${HEADER_PATH}/math.h
	${HEADER_PATH}/trait.h
	${HEADER_PATH}/mathfwd.h
    ${HEADER_PATH}/mathutil.h
    ${SOURCE_PATH}/mathutil.cpp
)
SOURCE_GROUP(${LIB_NAME} FILES ${MATH_LIST})

ADD_DEFINITIONS(-D_BUILD_DLL_EXPORT)
ADD_LIBRARY(${LIB_NAME} STATIC ${MATH_LIST})

IF(BUILD_PLATFORM_ANDROID)
    TARGET_LINK_LIBRARIES (${LIB_NAME} PRIVATE m)
ENDIF()

SET_TARGET_ATTRIBUTE(${LIB_NAME} "core")