SET(LIB_NAME animation)
SET(LIB_OUTNAME octoon-${LIB_NAME})

INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/libiconv/include)

SET(HEADER_PATH ${OCTOON_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${OCTOON_PATH_SOURCE}/${LIB_OUTNAME})

SET(ANIMATION_LIST
	${HEADER_PATH}/animation.h
	${HEADER_PATH}/animation_clip.h
	${HEADER_PATH}/animation_curve.h
)
SOURCE_GROUP(${LIB_NAME}\\animation  FILES ${ANIMATION_LIST})

SET(KEYFRAME_LIST
	${HEADER_PATH}/keyframe.h
)
SOURCE_GROUP(${LIB_NAME}\\keyframe  FILES ${KEYFRAME_LIST})

SET(INTERPOLATOR_LIST
	${HEADER_PATH}/interpolator.h
	${HEADER_PATH}/path_interpolator.h
	${HEADER_PATH}/fixed_interpolator.h
	${HEADER_PATH}/linear_interpolator.h
)
SOURCE_GROUP(${LIB_NAME}\\interpolator FILES ${INTERPOLATOR_LIST})

SET(LOADER_LIST
	${HEADER_PATH}/vmd.h
	${SOURCE_PATH}/vmd.cpp
)
SOURCE_GROUP(${LIB_NAME}\\loader FILES ${LOADER_LIST})

IF(OCTOON_BUILD_SHARED_DLL)
	ADD_DEFINITIONS(-DOCTOON_BUILD_DLL_EXPORT)
	ADD_LIBRARY(${LIB_OUTNAME} SHARED ${ANIMATION_LIST} ${KEYFRAME_LIST} ${INTERPOLATOR_LIST} ${LOADER_LIST})
ELSE()
	ADD_DEFINITIONS(-DOCTOON_STATIC)
	ADD_LIBRARY(${LIB_OUTNAME} ${ANIMATION_LIST} ${KEYFRAME_LIST} ${INTERPOLATOR_LIST} ${LOADER_LIST})
ENDIF()

TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE libiconv)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-io)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-math)
TARGET_LINK_LIBRARIES(${LIB_OUTNAME} PRIVATE octoon-runtime)

SET_TARGET_ATTRIBUTE(${LIB_OUTNAME} "core")