SET(LIB_NAME octoon-c)

SET(HEADER_PATH ${OCTOON_PATH_HEADER})
SET(SOURCE_PATH ${OCTOON_PATH_SOURCE}/${LIB_NAME})

SET(PLATFORM_LIST
    ${HEADER_PATH}/octoon.h
    ${HEADER_PATH}/octoon-c.h
)

IF(OCTOON_BUILD_PLATFORM_WINDOWS OR OCTOON_BUILD_PLATFORM_LINUX OR OCTOON_BUILD_PLATFORM_APPLE)
    LIST(APPEND PLATFORM_LIST ${SOURCE_PATH}/octoon_pc.cpp)
ELSEIF(OCTOON_BUILD_PLATFORM_JAVA)
    LIST(APPEND PLATFORM_LIST ${SOURCE_PATH}/octoon_jni.cpp)
ELSEIF(OCTOON_BUILD_PLATFORM_ANDROID)
    LIST(APPEND PLATFORM_LIST ${SOURCE_PATH}/octoon_ndk.cpp)
ELSEIF(OCTOON_BUILD_PLATFORM_EMSCRIPTEN)
    LIST(APPEND PLATFORM_LIST ${SOURCE_PATH}/octoon_x11.cpp)
ENDIF()

SOURCE_GROUP(${LIB_NAME} FILES ${PLATFORM_LIST})

ADD_LIBRARY(${LIB_NAME} STATIC ${PLATFORM_LIST})

IF(OCTOON_BUILD_PLATFORM_WINDOWS)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE GLFW_EXPOSE_NATIVE_WGL)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE GLFW_EXPOSE_NATIVE_WIN32)
ELSEIF(OCTOON_BUILD_PLATFORM_LINUX)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE GLFW_EXPOSE_NATIVE_GLX)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE GLFW_EXPOSE_NATIVE_X11)
ELSEIF(OCTOON_BUILD_PLATFORM_APPLE)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE GLFW_EXPOSE_NATIVE_NSGL)
    TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE GLFW_EXPOSE_NATIVE_COCOA)
ENDIF()

TARGET_COMPILE_DEFINITIONS(${LIB_NAME} PRIVATE OCTOON_STATIC)

TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE octoon)

IF(OCTOON_BUILD_PLATFORM_WINDOWS OR OCTOON_BUILD_PLATFORM_LINUX OR OCTOON_BUILD_PLATFORM_APPLE)
    FIND_PACKAGE(glfw3 REQUIRED)
    TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE glfw)
ENDIF()

IF(OCTOON_BUILD_PLATFORM_EMSCRIPTEN)
    TARGET_LINK_LIBRARIES(${LIB_NAME} PRIVATE X11)
    TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PRIVATE ${OCTOON_PATH_DEPENDENCIES}/X11)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PRIVATE ${OCTOON_PATH_INCLUDE})

SET_TARGET_ATTRIBUTE(${LIB_NAME} "octoon")